@@ -1,5 +1,7 @@
 package gft.edm.service;
 
+import gft.edm.exception.EmployeeNotFoundException;
+import gft.edm.exception.TimeEntryNotFoundException;
 import gft.edm.model.TimeEntry;
 import gft.edm.model.dto.TimeEntryDto;
 import gft.edm.repository.TimeEntryRepository;
@@ -7,10 +9,10 @@ import gft.edm.validation.TimeEntryValidation;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDate;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -19,25 +21,25 @@ public class TimeEntryService {
     private final TimeEntryRepository timeEntryRepository;
     private final TimeEntryValidation timeEntryValidation;
 
-    public List<TimeEntryDto> getTimeEntriesByEmployeeCode(String employeeCode) {
-        return timeEntryRepository.getAllByEmployeeCode(employeeCode).stream()
+    public List<TimeEntryDto> getTimeEntriesByEmployeeCode(String employeeCode, LocalDate start, LocalDate stop) {
+        return timeEntryRepository.getAllByEmployeeCode(employeeCode, start, stop).stream()
                 .map(TimeEntry::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<TimeEntryDto> getAllTimeEntries() {
         return timeEntryRepository.getAll().stream()
                 .map(TimeEntry::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public TimeEntryDto updateTimeEntry(TimeEntryDto timeEntryDto) {
+    public TimeEntryDto updateTimeEntry(String employeeCode, TimeEntryDto timeEntryDto) {
 
         TimeEntryDto checkedTimeEntry = timeEntryValidation.validateTimeEntry(timeEntryDto);
 
-        return timeEntryRepository.updateDisposition(checkedTimeEntry)
+        return timeEntryRepository.updateDisposition(employeeCode, checkedTimeEntry)
                 .map(TimeEntry::toDto)
-                .orElseThrow(() -> new RuntimeException("Disposition with id: " + timeEntryDto.getEmployeeCode() + " does not found"));
+                .orElseThrow(() -> new TimeEntryNotFoundException("TimeEntry with employeeCode: [" + employeeCode + "] does not found."));
     }
 
     public TimeEntryDto createDisposition(TimeEntryDto timeEntryDto) {
